# ai-trading-platform

./: .gitignore  MARKET_DATA_COLLECTOR_README.md  README.md  complete_multi_agent_trading_demo.py  example_multi_agent_trading.py  main.py  market_data_collector.py  pyproject.toml  requirements.txt  run_data_collector.py
ai_agents/: __init__.py
ai_agents/agents/: advanced_market_analyst.py  alternative_data_analyst.py  base_agent.py  macro_economist.py  market_analyst.py  market_microstructure_analyst.py  multi_asset_trader.py  news_analyst.py  options_specialist.py  performance_analytics.py  portfolio_manager.py  quantitative_analyst.py  quantitative_models.py  realtime_data_integrator.py  risk_manager.py
ai_agents/decision_engine/: coordinator.py
ai_agents/llm/: openai_client.py
backtesting/: __init__.py  engine.py
config/: __init__.py  settings.py
data_pipeline/collectors/: alpha_vantage_collector.py  base_collector.py  yahoo_finance_collector.py
data_pipeline/processors/: data_processor.py
data_pipeline/storage/: data_storage.py
order_execution/: __init__.py
order_execution/brokers/: alpaca_broker.py  base_broker.py
order_execution/execution/: order_manager.py
professional_trading_platform/: app.py
risk_management/: __init__.py  var_calculator.py
shared/database/: models.py
shared/models/: market_data.py
strategies/: __init__.py  mean_reversion.py  momentum_strategy.py
web_dashboard/: app.py
